# portal-framework

./: .clang-format  .env.template  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  Doxyfile.in  LICENSE  README.md  docs_logs.txt  doxygen_output.txt  doxygen_warnings.txt  main.cpp  setup-vcpkg-cache.ps1  setup-vcpkg-cache.sh  test.py  undocumented_renderer_files.md  vcpkg-configuration.json  vcpkg.json
application/: CMakeLists.txt
application/portal/application/: application.cpp  application.h  application_context.h  config.h  configuration.h  entry_point.h  frame_context.h  headless_application.cpp  headless_application.h  input_events.h  layer.cpp  layer.h  settings.cpp  settings.h
assets/: CMakeLists.txt
assets/portal/assets/: asset.h  asset_extensions.h  asset_manager.cpp  asset_manager.h  asset_metadata.h  asset_registry.cpp  asset_registry.h  asset_source.cpp  asset_source.h  asset_system.cpp  asset_system.h  asset_types.h
core/: CMakeLists.txt
core/cmake/: portal-install-helpers.cmake  portal-module-helpers.cmake  portal-test-helpers.cmake  portal-vcpkg-rpath-fix.cmake
core/portal/core/: assert.h  buffer.h  buffer_stream.cpp  buffer_stream.h  common.h  config.h.cmake  config.h.inc  custom_logger_formatters.h  file_system.cpp  file_system.h  flags.h  glm.h  log.cpp  log.h  random.cpp  random.h  reference.cpp  reference.h  string_utils.cpp  string_utils.h  tags.h  thread.h  timer.cpp  timer.h  type_traits.h  uuid.cpp  uuid.h  variant.h
core/scripts/: main.cpp  make_frozen_map.py  prepare_consteval_strings.py  rapidhash_runner.cmake  script_engine.cmake  uint128_t.h
core/tests/: CMakeLists.txt  JOB_SYSTEM_TEST_PLAN.md  buffer_stream_tests.cpp  buffer_tests.cpp  delegates_tests.cpp  jobs_tests.cpp  main.cpp  quick_benchmark.cpp  string_id_tests.cpp  tasks_tests.cpp
core/tests/concurrency/: reentrant_spin_lock_tests.cpp  spin_lock_tests.cpp  thread_tests.cpp
core/tests/jobs/: common.h  counter_tests.cpp  eager_workers_tests.cpp  edge_cases_tests.cpp  integration_tests.cpp  job_basics_tests.cpp  multithreading_tests.cpp  nested_jobs_tests.cpp  scheduler_tests.cpp  task_tests.cpp  worker_queue_tests.cpp
core/tests/memory/: pool_allocator_tests.cpp  stack_allocator_tests.cpp
core/tests/strings/: rapidhash_tests.cpp
docs/: CMakeLists.txt  Doxyfile.in  README.md  application.md  conf.py.in  context.md  core.md  engine.md  input.md  pyproject.toml
docs/source/: conf.py  development-status.md  index.md
docs/source/api/: index.md
docs/source/architecture/: core-systems.md
docs/source/concepts/: buildsystem.md  engine-architecture.md  frame-lifecycle.md  index.md  job-system.md  resource-management.md
docs/source/contributing/: building.md  code-style.md  documentation.md  index.md  testing.md
docs/source/getting-started/: advanced-project-setup.md  index.md  installation.md  project-setup.md  quickstart.md
docs/source/how-to/: index.md
docs/source/introduction/: architecture.md  features.md  index.md  overview.md
docs/source/modules/: application.md  context.md  core.md  engine.md  index.md  input.md  networking.md  serialization.md
docs/source/tutorials/: 01-window-and-inputs.md  02-rendering-basics.md  03-scene-graph.md  04-materials-and-shaders.md  05-building-a-simple-game.md  index.md
docs2/: CMakeLists.txt  pyproject.toml
docs2/source/: Doxyfile  conf.py  index.md
docs2/source/architecture/: core-systems.md
docs2/source/modules/: gui.md  networking.md
engine/: CMakeLists.txt  main.cpp
engine-core/: CMakeLists.txt
engine-core/tests/: CMakeLists.txt  logger_listener.cpp
engine-core/tests/jobs/: common.h  counter_tests.cpp  eager_workers_tests.cpp  edge_cases_tests.cpp  integration_tests.cpp  job_basics_tests.cpp  multithreading_tests.cpp  nested_jobs_tests.cpp  scheduler_tests.cpp  task_tests.cpp  worker_queue_tests.cpp
engine/cmake/: portal-engine-helpers.cmake  portal-engine-package-helpers.cmake
engine/config/: default_editor_imgui.ini
engine/portal/engine/: config.h  engine.cpp  engine.h  engine_context.h  entry_point.h  reference.h  settings.cpp  settings.h
engine/resources/: engine.podb  gradient.compute.slang  portal_icon_64x64.icns  portal_icon_64x64.png.pmeta  portal_icon_64x64_icns.icns.pmeta  root.par
engine/resources/PBR/: animation.slang  common.slang  functions.slang  ibl.slang  lights.slang  material_info.slang  pbr.slang  textures.slang  tonemapping.slang
engine/resources/shaders/: default_shader.slang  default_shader.slang.pmeta  equirectangular_to_cubemap.slang  equirectangular_to_cubemap.slang.pmeta  pbr.slang  pbr.slang.pmeta  pbr_static.slang  pbr_static.slang.pmeta  portal_common.slang  portal_common.slang.pmeta  portal_lights.slang.pmeta  portal_pbr.slang.pmeta  portal_scene.slang  portal_scene.slang.pmeta
engine/resources/textures/: BRDF_LUT.png.pmeta  meadow_2_2k.hdr.pmeta
engine/shaders/: basic.shading.slang  mesh.shading.slang  pbr.slang  sky.compute.slang  triangle.shading.slang
engine/shaders/PBR/: animation.slang  brdf.slang  functions.slang  ibl.slang  iridescense.slang  lights.slang  material_info.slang  pbr.slang  textures.slang  tonemapping.slang
engine/tests/: CMakeLists.txt  bench_main.cpp  hash_benchmark.cpp  test_main.cpp
engine/tests/allocator/: pool_allocator_tests.cpp  stack_allocator_tests.cpp
examples/engine_test/: CMakeLists.txt  main.cpp  settings.json
examples/engine_test/resources/: ABeautifulGame.gltf.pmeta  Bishop_black_ORM.jpg.pmeta  Bishop_black_base_color.jpg.pmeta  Bishop_black_normal.jpg.pmeta  Bishop_white_ORM.jpg.pmeta  Bishop_white_base_color.jpg.pmeta  Bishop_white_normal.jpg.pmeta  Castle_ORM.jpg.pmeta  Castle_black_base_color.jpg.pmeta  (+29 more)
examples/shader_playground/: CMakeLists.txt  settings.json
gui/: CMakeLists.txt
input/: CMakeLists.txt
llvm-adt/: CMakeLists.txt
networking/: CMakeLists.txt
renderer/: CMakeLists.txt
serialization/: CMakeLists.txt
serialization/tests/: CMakeLists.txt  archive_tests.cpp  binary_serialization_tests.cpp  config_impl.cpp  json_archive_tests.cpp  something.cpp
(+2332 files in other folders)
