[project]
name = "portal-framework-docs"
version = "0.1.6"
description = "Documentation build dependencies for Portal Framework"
requires-python = ">=3.12"
dependencies = [
    "sphinx>=7.0.0",
    "myst-parser>=2.0.0",
    "exhale>=0.3.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-inline-tabs>=2025.12.21.14",
    "furo>=2025.12.19",
    "sphinx-design>=0.6.1",
    "sphinx-autobuild>=2024.0.0",
    "sphinxcontrib-mermaid>=1.2.3",
]

[tool.uv.sources]
exhale = { git = "https://github.com/JonatanNevo/exhale" }
